--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 </head>
 
 <body>
+   
+
     <header>
         <div class="container-fluid hide1">
-            <div class="container p-7">
+            <div class="container">
                 <div class="d-flex">
                     <div class="p-10 w-15 lg-1 p-0 text-center">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
@@ -70,7 +77,7 @@
 
 
         <div class="container-fluid1">
-            <div class="container p-7">
+            <div class="container">
                 <div class="d-flex">
                     <div class="w-30 p-10 start md-90 sm-75">
                         <div class="w-1 h-50">
@@ -567,15 +574,18 @@
                 </div>
             </div>
 
-            <div class="d-flex">
-                <div class="w-3 h-3 p-20">
-                    <div class="box"></div>
+            <div class="slider1">
+                <div class="p-20">
+                    <div class="box">123456789</div>
                 </div>
-                <div class="w-3 h-3 p-20">
-                    <div class="box"></div>
+                <div class="p-20">
+                    <div class="box">123456789</div>
                 </div>
-                <div class="w-3 h-3 p-20">
-                    <div class="box"></div>
+                <div class="p-20">
+                    <div class="box">123456789</div>
+                </div>
+                <div class="p-20">
+                    <div class="box">123456789</div>
                 </div>
             </div>
         </div>
@@ -820,17 +830,47 @@
             <div class="d-flex">
                 <div class="w-4 h-3 p-20">
                     <div class="box">
-                        <img class="border-radius10" width="100%" height="100%" src="Images/team/team-1..jpg" alt="">
+                        <img class="border-radius10" width="100%" height="91%" src="Images/team/team-1..jpg" alt="">
+                        <div class="bg3 text-center p-8">
+                            <span class="font10 open fluid3 fw-7 lh5">
+                                Full Name
+                            </span>
+                            <p class="font8 open fluid7">Designation</p>
+                        </div>
                     </div>
                 </div>
                 <div class="w-4 h-3 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <img class="border-radius10" width="100%" height="91%" src="Images/team/team-2.jpg" alt="">
+                        <div class="bg3 text-center p-8">
+                            <span class="font10 open fluid3 fw-7 lh5">
+                                Full Name
+                            </span>
+                            <p class="font8 open fluid7">Designation</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="w-4 h-3 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <img class="border-radius10" width="100%" height="91%" src="Images/team/team-3.jpg" alt="">
+                        <div class="bg3 text-center p-8">
+                            <span class="font10 open fluid3 fw-7 lh5">
+                                Full Name
+                            </span>
+                            <p class="font8 open fluid7">Designation</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="w-4 h-3 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <img class="border-radius10" width="100%" height="91%" src="Images/team/team-4.jpg" alt="">
+                        <div class="bg3 text-center p-8">
+                            <span class="font10 open fluid3 fw-7 lh5">
+                                Full Name
+                            </span>
+                            <p class="font8 open fluid7">Designation</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -841,26 +881,162 @@
     <section>
         <div class="container mt-40 p-7">
             <div class="d-flex">
-                <div class="w-5 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box mb-5">
+                        <h5 class="font6 nunito fluid3 p-2 border-color border-line border border-radius50 fw-7 lh">
+                            Testimonial
+                        </h5>
+                    </div>
                 </div>
             </div>
 
             <div class="d-flex">
-                <div class="w-70 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box text-center">
+                        <h1 class="font7 fluid3 nunito fw-8 lh">
+                            What Clients Say <br />
+                            About Our Services
+                        </h1>
+                    </div>
                 </div>
             </div>
 
-            <div class="d-flex">
-                <div class="w-3 h-4 p-10">
-                    <div class="box"></div>
+            <div class="responsive">
+                <div class="p-30">
+                    <div class="box background1 border-radius">
+                        <div class="p-20 mb-24">
+                            <p class="open font6 fluid2 fw-4 lh5">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                            </p>
+                        </div>
+                        <div class="d-flex">
+                            <div>
+                                <img class="border-radius50per" src="Images/testimonial/testimonial-2.jpg" alt="">
+                            </div>
+                            <div class="ml-10">
+                                <h4 class="font10 nunito fluid3 fw-7 lh mt-10">
+                                    Client Name
+                                </h4>
+                                <p class="fluid2 open font8 lh5 fw-4 mb-4">
+                                    Profession
+                                </p>
+
+                                <span class="fluid1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+
+                                <div class="qute">
+                                    <i class="font6 fw-9 fa-solid fa-quote-left"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="w-3 h-4 p-10">
-                    <div class="box"></div>
+                <div class="p-30">
+                    <div class="box background1 border-radius">
+                        <div class="p-20 mb-24">
+                            <p class="open font6 fluid2 fw-4 lh5">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                            </p>
+                        </div>
+                        <div class="d-flex">
+                            <div>
+                                <img class="border-radius50per" src="Images/testimonial/testimonial-3.jpg" alt="">
+                            </div>
+                            <div class="ml-10">
+                                <h4 class="font10 nunito fluid3 fw-7 lh mt-10">
+                                    Client Name
+                                </h4>
+                                <p class="fluid2 open font8 lh5 fw-4 mb-4">
+                                    Profession
+                                </p>
+
+                                <span class="fluid1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+
+                                <div class="qute">
+                                    <i class="font6 fw-9 fa-solid fa-quote-left"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="w-3 h-4 p-10">
-                    <div class="box"></div>
+                <div class="p-30">
+                    <div class="box background1 border-radius">
+                        <div class="p-20 mb-24">
+                            <p class="open font6 fluid2 fw-4 lh5">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                            </p>
+                        </div>
+                        <div class="d-flex">
+                            <div>
+                                <img class="border-radius50per" src="Images/testimonial/testimonial-4.jpg" alt="">
+                            </div>
+                            <div class="ml-10">
+                                <h4 class="font10 nunito fluid3 fw-7 lh mt-10">
+                                    Client Name
+                                </h4>
+                                <p class="fluid2 open font8 lh5 fw-4 mb-4">
+                                    Profession
+                                </p>
+
+                                <span class="fluid1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+
+                                <div class="qute">
+                                    <i class="font6 fw-9 fa-solid fa-quote-left"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-30">
+                    <div class="box background1 border-radius">
+                        <div class="p-20 mb-24">
+                            <p class="open font6 fluid2 fw-4 lh5">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                            </p>
+                        </div>
+                        <div class="d-flex">
+                            <div>
+                                <img class="border-radius50per" src="Images/testimonial/testimonial-1.jpg" alt="">
+                            </div>
+                            <div class="ml-10">
+                                <h4 class="font10 nunito fluid3 fw-7 lh mt-10">
+                                    Client Name
+                                </h4>
+                                <p class="fluid2 open font8 lh5 fw-4 mb-4">
+                                    Profession
+                                </p>
+
+                                <span class="fluid1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+
+                                <div class="qute">
+                                    <i class="font6 fw-9 fa-solid fa-quote-left"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -869,37 +1045,109 @@
     <!-- --------------------------------footer------------------ -->
 
     <footer>
-        <div class="container mt-40 p-7">
-            <div class="d-flex">
-                <di">
-                    <div class="box"></div>
-            </div>
-            <di">
-                <div class="box"></div>
-        </div>
-        <di">
-            <div class="box"></div>
-            </div>
-            <di">
-                <div class="box"></div>
-                </div>
-                </div>
-                </div>
-
-
-
-                <div class="container p-7">
-                    <div class="d-flex">
-                        <div class="w-3 h-2 p-20">
-                            <div class="box"></div>
-                        </div>
-                        <div class="w-3 h-2 p-20">
-                            <div class="box"></div>
-                        </div>
-                        <div class="w-3 h-2 p-20">
-                            <div class="box"></div>
+        <div class="container1 h-4 ime2">
+            <div class="container mt-40 p-7">
+                <div class="d-flex border mt-24">
+                    <div class="w-4 h-2 p-10">
+                        <div class="box">
+                            <h4 class="font10 open mb-24 fluid4 fw-7 lh ">
+                                About PestKit.
+                            </h4>
                         </div>
                     </div>
+
+                    <div class="w-4 h-2 p-10">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="w-4 h-2 p-10">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="w-4 h-2 p-10">
+                        <div class="box"></div>
+                    </div>
                 </div>
+            </div>
+        </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script>
+        $('.responsive').slick({
+            dots: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+                // You can unslick at a given breakpoint now by adding:
+                // settings: "unslick"
+                // instead of a settings object
+            ]
+        });
+    </script>
+
+    <script>
+        $('.slider1').slick({
+  dots: true,
+  infinite: true,
+  speed: 300,
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  responsive: [
+    {
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        infinite: true,
+        dots: true
+      }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2
+      }
+    },
+    {
+      breakpoint: 480,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+});
+    </script>
 </body>
